# shadeup-lang

./: .gitignore  README.md  package-lock.json  package.json
editor/: index.html  package-lock.json  package.json  tailwind.config.cjs  tsconfig.json  vite.config.js  vite.config.ts  vite.config.worker.ts
editor/.svelte-kit/: ambient.d.ts
editor/.svelte-kit/types/: route_meta_data.json
editor/.svelte-kit/types/src/routes/: $types.d.ts
editor/.svelte-kit/types/src/routes/debug/fuzz/: $types.d.ts
editor/.svelte-kit/types/src/routes/editor/: $types.d.ts
editor/my/: package-lock.json  package.json
editor/my/src/routes/: +page.svelte
editor/src/: app.html  app.scss  client.ts  parser.ne  serverWorker.ts  shadeup.ts
editor/src/components/editor/: MonacoEditor.svelte  ShadeupEditor.svelte
editor/src/components/engine/: ShadeupRenderer.svelte
editor/src/components/fuzz/: TestCase.svelte
editor/src/monaco/: editor.ts  languages.ts  monaco.ts  monarch.js  shadeup.ts
editor/src/routes/: +layout.svelte  +page.svelte
editor/src/routes/debug/fuzz/: +page.svelte
editor/src/routes/editor/: +page.svelte
editor/src/shadeup/: environment.ts  frame.html  runner.ts
editor/src/shadeup/engine/: frame.html
editor/src/store/: test.ts
editor/src/tests/: all.ts  basic.ts  flow.ts  functions.ts  structures.ts  test.ts
editor/static/: frame-engine.js
parser/: Cargo.toml  test.js
parser-wasm/: Cargo.toml  LICENSE_MIT  index.js  package-lock.json  package.json  test.txt
parser-wasm/src/: lib.rs
parser/src/: ast.rs  dep_graph.rs  environment.rs  generator.rs  graph.rs  lexer.rs  lib.rs  main.rs  new.rs  parser.rs  parser2.rs  printer.rs  shadeup.lalrpop  test.shadeup  validator.rs  webgl.rs
runtime/: Cargo.toml  index.html  index.js  package-lock.json  package.json  webpack.config.js  worker.js
runtime/example/: blur.shadeup  main.shadeup  scope.shadeup
runtime/src/: lib.rs
